fix: spacing on login form

--- a/src/assets/pages/_login.scss
+++ b/src/assets/pages/_login.scss
@@ -73,7 +73,7 @@
             display: flex;
             padding: 4rem 10rem;
             flex-direction: column;
-            justify-items: space-between;
+            justify-content: center;
         }
     }
 }
